# devenv

./: .env.example  .gitignore  LICENSE  README.md  feature.md  memory.md  process.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
core/: env.py  logging_utils.py
core/ai/: __init__.py  codex_backend.py  engine.py  models.py  ollama_backend.py  opencode_client.py  prd1.md  routing.py
core/memory/: README.md  __init__.py  consolidation.py  embeddings.py  engine.py  extractors.py  interface.py  models.py  prd_objective.md  prd_tech.md  retrieval.py  storage.py  vector_index.py  working_memory.py
core/runtime/: __init__.py  context_builder.py  context_stage.py  kernel.py  local_model.py  local_router.py  mcp_client.py  mcp_http.py  mcp_server.py  metadata_stage.py  models.py  prd1.md  prd1_1.md  response_sanitizer.py  sandbox.py  setup.py  smoke.py  state.py  tooling.py  tui.py  web.py  workspace.py
core/tools/: __init__.py  _common.py  audit_changes.py  base.py  edit_file.py  generate_pdf.py  generate_prompt.py  inspect_symbols.py  inspect_trace.py  knowledge_search.py  list_directory.py  locate_files.py  manage_memory.py  peek_lines.py  prd1_1.md  read_file.py  remove_file.py  run_diagnostics.py  run_shell.py  search_text.py  track_symbol.py  web_search.py  write_file.py
interface/website/: index.html  main.js  styles.css
interface/website/src/: App.js  api.js  index.js
interface/website/src/components/: AccessCard.js  AssistantMessage.js  ChatColumn.js  Composer.js  ContextBuilderPanel.js  ErrorMessage.js  FilePreviewPanel.js  FileSidebar.js  FileTree.js  Footer.js  Header.js  HeaderBar.js  LogPanel.js  PlanFlowchart.js  PlanRail.js  SessionsCard.js  SettingsDropdown.js  Sidebar.js  StepsPanel.js  TerminalPanel.js  ThinkingMessage.js  Toast.js  ToolPicker.js  Transcript.js  UsageCard.js  UserMessage.js
interface/website/src/context/: AppContext.js
interface/website/src/lib/: file_preview.js  markdown.js
interface/website/src/utils/: format.js  plans.js  storage.js  validation.js
sample-test/calendar/frontend/: index.html  script.js  style.css
sample-test/memory-demo/: README.md  demo_memory.db  demo_memory_recall.py
sample-test/tool-fixtures/: README.md
sample-test/tool-fixtures/app/: main.py  utils.py
sample-test/tool-fixtures/app/services/: calendar_service.py
sample-test/tool-fixtures/data/: config.json
sample-test/tool-fixtures/docs/: architecture.md
sample-test/tool-fixtures/notes/: todo.txt
tests/ai/: test_codex_backend.py  test_engine.py  test_models.py  test_ollama_backend.py  test_opencode_client.py  test_routing.py
tests/memory/: test_consolidation.py  test_control.py  test_engine_core.py  test_imports.py  test_performance.py  test_retrieval.py  test_storage.py  test_vector_index.py  test_working_memory.py
tests/runtime/: test_context_builder.py  test_kernel.py  test_mcp.py  test_mcp_http.py  test_planning.py  test_response_sanitizer.py  test_sandbox.py  test_setup.py  test_smoke.py  test_web.py
tests/tools/: test_audit_changes.py  test_edit_file.py  test_generate_pdf.py  test_generate_prompt.py  test_inspect_symbols.py  test_inspect_trace.py  test_knowledge_search.py  test_list_directory.py  test_locate_files.py  test_manage_memory.py  test_peek_lines.py  test_read_file.py  test_remove_file.py  test_run_diagnostics.py  test_run_shell.py  test_search_text.py  test_track_symbol.py  test_web_search.py  test_write_file.py
