[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "devenv-ai"
version = "0.1.2"
description = "Local-first coding agent foundations."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Devenv Contributors" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "lancedb>=0.16.0",
    "mcp[cli]>=1.28.0",
    "sentence-transformers>=3.0.0",
]

[project.scripts]
devenv-run = "core.runtime.tui:main"
devenv-smoke = "core.runtime.smoke:main"
devenv-web = "core.runtime.web:main"
devenv-mcp = "core.runtime.mcp_server:main"

[tool.setuptools.packages.find]
include = ["core*"]

[tool.setuptools.data-files]
"share/devenv/interface/website" = [
    "interface/website/index.html",
    "interface/website/main.js",
    "interface/website/styles.css",
]
