[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "devenv-ai"
version = "0.1.5"
description = "Local-first coding agent foundations."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Devenv Contributors" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "lancedb>=0.16.0",
    "mcp[cli]>=1.28.0",
    "sentence-transformers>=3.0.0",
]

[project.scripts]
devenv-run = "core.runtime.tui:main"
devenv-smoke = "core.runtime.smoke:main"
devenv-web = "core.runtime.web:main"
devenv-mcp = "core.runtime.mcp_server:main"
devenv-setup = "core.runtime.setup:main"

[tool.setuptools.packages.find]
include = ["core*"]

[tool.setuptools.data-files]
"share/devenv/interface/website" = [
    "interface/website/index.html",
    "interface/website/styles.css",
    "interface/website/favicon.svg",
]
"share/devenv/interface/website/src" = [
    "interface/website/src/App.js",
    "interface/website/src/api.js",
    "interface/website/src/index.js",
]
"share/devenv/interface/website/src/components" = [
    "interface/website/src/components/AccessCard.js",
    "interface/website/src/components/AssistantMessage.js",
    "interface/website/src/components/ChatColumn.js",
    "interface/website/src/components/Composer.js",
    "interface/website/src/components/ContextBuilderPanel.js",
    "interface/website/src/components/ErrorMessage.js",
    "interface/website/src/components/FilePreviewPanel.js",
    "interface/website/src/components/FileTree.js",
    "interface/website/src/components/Footer.js",
    "interface/website/src/components/Header.js",
    "interface/website/src/components/PlanFlowchart.js",
    "interface/website/src/components/SessionsCard.js",
    "interface/website/src/components/SettingsDropdown.js",
    "interface/website/src/components/Sidebar.js",
    "interface/website/src/components/StepsPanel.js",
    "interface/website/src/components/ThinkingMessage.js",
    "interface/website/src/components/Toast.js",
    "interface/website/src/components/ToolPicker.js",
    "interface/website/src/components/Transcript.js",
    "interface/website/src/components/UsageCard.js",
    "interface/website/src/components/UserMessage.js",
]
"share/devenv/interface/website/src/context" = [
    "interface/website/src/context/AppContext.js",
]
"share/devenv/interface/website/src/lib" = [
    "interface/website/src/lib/file_preview.js",
    "interface/website/src/lib/markdown.js",
]
"share/devenv/interface/website/src/utils" = [
    "interface/website/src/utils/format.js",
    "interface/website/src/utils/plans.js",
    "interface/website/src/utils/storage.js",
    "interface/website/src/utils/validation.js",
]
